Update redirect paths base on user's company

--- a/app/views/advertisers/_form.html.slim
+++ b/app/views/advertisers/_form.html.slim
@@ -75,8 +75,7 @@
         = f.input :affinity, collection: affinity_options, input_html: { multiple: true, class: 'select2-input form-control', data: { placeholder: 'Select Affinity' } }, include_hidden: false
 
     .col-12
-
-      = f.submit 'Update Profile', class: 'btn btn-primary float-right'
+      = f.submit 'Create Profile', class: 'btn btn-primary float-right'
 
 
 
