--- a/app/views/campaigns/edit.slim
+++ b/app/views/campaigns/edit.slim
@@ -1,5 +1,7 @@
 .container-fluid.campaigns
-  .card
-    .card-body
-      h4 Edit Campaign
-      = render 'form'
+  .row
+    .col-12
+      h1.h5.mb-4 Edit Campaign
+      .card
+        .card-body
+          = render 'form'
