--- a/app/views/campaigns/new.slim
+++ b/app/views/campaigns/new.slim
@@ -1,12 +1,11 @@
 .container-fluid.campaigns
   .row
     .col-12
-      h1.h5.mb-4 Data Studio > Create Campaign
+      h1.h5.mb-4 Create Campaign
       .card
         .card-body
           .row
             .col-12
-              h1.h5 Create Campaign
               p.light-text Please enter the details of your new campaign
 
           = render 'form'
