--- a/app/views/advertisers/_form_advertiser.slim
+++ b/app/views/advertisers/_form_advertiser.slim
@@ -70,12 +70,13 @@
     .col-4
       .form-group.mb-4
         = f.input :language, collection: language_options, input_html: { multiple: true, class: 'select2-input form-control', data: { placeholder: 'Select Languages' } }, include_hidden: false
-    .col-4
+    .col-6
       .form-group.mb-4
         = f.input :affinity, collection: affinity_options, input_html: { multiple: true, class: 'select2-input form-control', data: { placeholder: 'Select Affinity' } }, include_hidden: false
-
-    .col-12
-
+    .col-6
+    .col-6
+      = link_to 'Cancel', data_studios_path(advertiser: @advertiser)
+    .col-6
       = f.submit 'Update', class: 'btn btn-primary float-right'
 
 
