--- a/app/views/advertisers/_form_agency.slim
+++ b/app/views/advertisers/_form_agency.slim
@@ -17,9 +17,10 @@
     .col-4
       .form-group.mb-4
         = f.input :preferred_service_level, collection: service_level_options, label_method: lambda { |option| option.to_s.humanize }, include_blank: false, label: 'Preferred Service Level', input_html: { class: 'select2-input form-control' }
-
-    .col-12
-      = f.submit 'Update Profile', class: 'btn btn-primary float-right'
+    .col-6
+      = link_to 'Cancel', data_studios_path
+    .col-6
+      = f.submit 'Update', class: 'btn btn-primary float-right'
 
 javascript:
   $(document).ready(function() {
