--- a/app/views/campaign_mailer/internal_notification.slim
+++ b/app/views/campaign_mailer/internal_notification.slim
@@ -12,55 +12,103 @@ ul
   li
     strong Company Type:
     = @user&.user_type&.capitalize
-  - if @user&.user_type == 'agency'
+  li
+    strong Industry:
+    = @user_ad_profile&.industry
+  li
+    strong Client Count:
+    = @user_ad_profile&.client_count
+  li
+    strong Preferred Service Level:
+    = @user_ad_profile&.preferred_service_level
+
+- if @user&.user_type == 'agency'
+  h3 Agency Details:
+  ul
+    li
+      strong ID:
+      = @agency&.id
+    li
+      strong Company Name:
+      = @agency&.company_name
+    li
+      strong URL:
+      = @agency&.website
     li
       strong Industry:
-      = @user_ad_profile&.industry
+      = @agency&.industry
     li
-      strong Client Count:
-      = @user_ad_profile&.client_count
-    li
-      strong Preferred Service Level:
-      = @user_ad_profile&.preferred_service_level
+      strong Customer Target:
+      = @agency&.customer_target
 
-h3 Campaign Details:
-ul
-  li
-    strong ID:
-    = @campaign&.id
-  li
-    strong Name:
-    = @campaign&.name
-  li
-    strong URL:
-    = @campaign&.url
-  li
-    strong Flight Length:
-    | #{@campaign&.flight_start_date&.strftime("%m/%d/%Y")} - #{@campaign&.flight_end_date&.strftime("%m/%d/%Y")}
-  li
-    strong Goal:
-    = @campaign&.goal
-  li
-    strong KPI:
-    = @campaign&.kpi
-  li
-    strong CPA Goal:
-    = number_to_currency(@campaign&.cpa_goal)
-  li
-    strong ROAS Goal:
-    | #{@campaign&.roas_goal} : 1
-  li
-    strong Budget:
-    = number_to_currency(@campaign&.budget)
-  li
-    strong Geography:
-    = @campaign&.geography
-  li
-    strong Audience Targeting:
-    = @campaign&.audience_targeting
-  li
-    strong Date Requested:
-    = @campaign&.created_at&.strftime("%B %d %Y")
+    li
+      strong Monthly Unique Visitors:
+      = number_with_delimiter(@agency&.monthly_unique_visitors, delimiter: ',')
+
+    li
+      strong Average Order Value:
+      = number_to_currency(@agency&.average_order_value)
+
+    li
+      strong Conversion Rate:
+      = @agency&.conversion_rate
+
+    li
+      strong Cost Per Acquisition:
+      = number_to_currency(@agency&.cost_per_acquisition)
+
+    li
+      strong Current Media Mix:
+      - if !@agency&.current_media_mix.empty?
+        ul
+          - @agency&.current_media_mix.each do |item|
+            li = item
+
+    li
+      strong Age Range:
+      | #{@agency&.age_range_start} - #{@agency&.age_range_end}
+
+    li
+      strong Gender:
+      - if !@agency&.gender.empty?
+        ul
+          - @agency&.gender.each do |item|
+            li = item
+
+    li
+      strong Household Income:
+      - if !@agency&.household_income.empty?
+        ul
+          - @agency&.household_income.each do |item|
+            li = item
+
+    li
+      strong Parental Status:
+      - if !@agency&.parental_status.empty?
+        ul
+          - @agency&.parental_status.each do |item|
+            li = item
+
+    li
+      strong Education:
+      - if !@agency&.education.empty?
+        ul
+          - @agency&.education.each do |item|
+            li = item
+
+    li
+      strong Language:
+      - if !@agency&.language.empty?
+        ul
+          - @agency&.language.each do |item|
+            li = item
+
+    li
+      strong Affinity:
+      - if !@agency&.affinity.empty?
+        ul
+          - @agency&.affinity.each do |item|
+            li = item
 
 h3 Advertiser Details:
 ul
@@ -148,3 +196,42 @@ ul
       ul
         - @advertiser&.affinity.each do |item|
           li = item
+
+h3 Campaign Details:
+ul
+  li
+    strong ID:
+    = @campaign&.id
+  li
+    strong Name:
+    = @campaign&.name
+  li
+    strong URL:
+    = @campaign&.url
+  li
+    strong Flight Length:
+    | #{@campaign&.flight_start_date&.strftime("%m/%d/%Y")} - #{@campaign&.flight_end_date&.strftime("%m/%d/%Y")}
+  li
+    strong Goal:
+    = @campaign&.goal
+  li
+    strong KPI:
+    = @campaign&.kpi
+  li
+    strong CPA Goal:
+    = number_to_currency(@campaign&.cpa_goal)
+  li
+    strong ROAS Goal:
+    | #{@campaign&.roas_goal} : 1
+  li
+    strong Budget:
+    = number_to_currency(@campaign&.budget)
+  li
+    strong Geography:
+    = @campaign&.geography
+  li
+    strong Audience Targeting:
+    = @campaign&.audience_targeting
+  li
+    strong Date Requested:
+    = @campaign&.created_at&.strftime("%B %d %Y")
