--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -12,8 +12,8 @@ nav#sidebar
     p MANAGE
     li.clearfix class=(controller_name == 'data_studios' ? 'active' : '')
       .icon-container
-        i.fas.fa-chalkboard-teacher 
-      = link_to "Data Studio", data_studios_path
+        i.fas.fa-chalkboard-teacher
+      = link_to "Data Studio", campaigns_path
     li.clearfix
       .icon-container
         i.fas.fa-crop-alt
