--- a/app/views/campaigns/_form.slim
+++ b/app/views/campaigns/_form.slim
@@ -7,7 +7,7 @@
       .form-group.mb-4
         = f.input :url, label: 'Campaign URL'
 
-      = f.input :advertiser_id, as: :hidden, input_html: { value:  @advertiser.id }
+      = f.input :advertiser_id, as: :hidden, input_html: { value:  @company.id }
     .col-4
       .form-group.mb-4
         = f.input :goal, collection: goal_options, include_blank: false, input_html: { class: 'select2-input form-control' }
@@ -55,7 +55,7 @@
         .audience-targeting
           = f.association :audiences, collection: current_user.audiences, label_method: :name, value_method: :id, as: :check_boxes, label: "Add more from the audience tab"
     .col-6
-      = link_to 'Cancel', campaigns_path(advertiser: params[:advertiser])
+      = link_to 'Cancel', campaigns_path
     .col-6
       = f.button :button, "Request IO", type: 'submit', name: "request_type", value: "insertion_order", class: 'btn btn-primary float-right ml-3'
       = f.button :button, "Request Recommendations", type: 'submit', name: "request_type", value: "recommendation", class: 'btn btn-primary float-right'
