--- a/app/views/campaigns/index.slim
+++ b/app/views/campaigns/index.slim
@@ -3,12 +3,9 @@
     .col-12
       h1.h5.mb-4.float-left
         | Data Studio >
-        - if current_user.user_type == 'agency'
-          = link_to "#{current_user.company} ", edit_advertiser_path(current_user.advertiser_profile.id)
-          | > #{@advertiser.company_name} > Campaigns
-        - else
-          = link_to "#{@advertiser.company_name} ", edit_advertiser_path(@advertiser.id)
-          | > Campaigns
+        - if current_user.company_type == 'Advertiser'
+          = link_to "#{current_user.company.company_name}", advertiser_path(current_user.company.id)
+          |  > Campaigns
   .row
     .col-12
       ul.nav.nav-tabs
@@ -42,6 +39,6 @@
                         td
                           = link_to "Edit", edit_campaign_path(campaign, advertiser: params[:advertiser]), class: 'action-link'
                           = link_to "Delete", campaign_path(campaign), method: :delete, data: { confirm: 'Are you sure?' }, class: 'action-link'
-            - if current_user.user_type == 'agency'
-              .col-12
-                = link_to 'Back', advertisers_path
+            / - if current_user.user_type == 'agency'
+            /   .col-12
+            /     = link_to 'Back', advertisers_path
