--- a/app/views/advertisers/show.html.slim
+++ b/app/views/advertisers/show.html.slim
@@ -3,7 +3,7 @@
     .col-12
       h1.h5.mb-4.float-left
         | Data Studio >
-        = link_to "#{current_user.company.company_name}", advertiser_path(current_user.company.id)
+        = link_to "#{current_user.company.name}", advertiser_path(current_user.company.id)
 
   .row
     .col-12
@@ -21,7 +21,7 @@
                     th Action
                   tbody
                     tr
-                      td = @advertiser.company_name
+                      td = @advertiser.name
                       td = @advertiser.website
                       td = @advertiser.campaigns.count
                       td = @advertiser.users.count
