--- a/app/views/data_studios/audiences.slim
+++ b/app/views/data_studios/audiences.slim
@@ -3,7 +3,7 @@
     .col-12
       h1.h5.mb-4.float-left
         - if current_user.company_type == 'Advertiser'
-          | #{@company.company_name}'s Campaigns
+          | #{@company.name}'s Campaigns
   .row
     .col-12
       ul.nav.nav-tabs
