--- a/app/views/advertisers/_form_advertiser.slim
+++ b/app/views/advertisers/_form_advertiser.slim
@@ -4,7 +4,7 @@
   .row.form-page-1
     .col-4
       .form-group.mb-4
-        = f.input :company_name
+        = f.input :name
     .col-4
       .form-group.mb-4
         = f.input :website, label: 'Website URL'
