Remove user type and update invitable with user company types

--- a/app/views/advertisers/show.html.slim
+++ b/app/views/advertisers/show.html.slim
@@ -27,5 +27,5 @@
                       td = @advertiser.users.count
                       td
                         = link_to 'Edit', edit_advertiser_path
-                        = link_to 'User(s)', users_path
+                        = link_to 'User(s)', advertiser_users_path(@advertiser)
                         = link_to 'Campaign(s)', campaigns_path
