--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -4,7 +4,7 @@ nav#sidebar
     li.clearfix class=(controller_name == 'data_studios' ? 'active' : '')
       .icon-container
         i.fas.fa-chalkboard-teacher
-      = link_to "Data Studio", campaigns_path
+      = link_to "Data Studio", data_studios_path
     li.clearfix
       .icon-container
         i.fas.fa-crop-alt
