--- a/app/views/advertisers/show.html.slim
+++ b/app/views/advertisers/show.html.slim
@@ -28,4 +28,4 @@
                       td
                         = link_to 'Edit', edit_advertiser_path
                         = link_to 'User(s)', advertiser_users_path(@advertiser)
-                        = link_to 'Campaign(s)', campaigns_path
+                        = link_to 'Campaign(s)', advertiser_campaigns_path(@advertiser)
