--- a/app/views/agencies/show.slim
+++ b/app/views/agencies/show.slim
@@ -16,16 +16,16 @@
                   tr
                     th Name
                     th Website
-                    th Campaign Count
+                    th Client Count
                     th User Count
                     th Action
                   tbody
                     tr
-                      td = @advertiser.name
-                      td = @advertiser.website
-                      td = @advertiser.campaigns.count
-                      td = @advertiser.users.count
+                      td = @agency.name
+                      td = @agency.website
+                      td = @agency.clients.count
+                      td = @agency.users.count
                       td
-                        = link_to 'Edit', edit_advertiser_path
-                        = link_to 'Campaign(s)', advertiser_campaigns_path(@advertiser)
-                        = link_to 'User(s)', advertiser_users_path(@advertiser)
+                        = link_to 'Edit', edit_agency_path
+                        = link_to 'Client(s)', agency_clients_path(@agency)
+                        = link_to 'User(s)', agency_users_path(@agency)
