--- a/app/views/clients/new.slim
+++ b/app/views/clients/new.slim
@@ -3,7 +3,7 @@
     .col-12
       h1.h5.mb-4.float-left
         | Data Studio >
-        = link_to "#{current_user.company.name}", advertiser_path(current_user.company.id)
+        = link_to "#{current_user.company.name}", agency_path(current_user.company.id)
 
   .row
     .col-12
