--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -12,7 +12,7 @@ nav#sidebar
     p MANAGE
     li.clearfix class=(controller_name == 'data_studios' ? 'active' : '')
       .icon-container
-        i.fas.fa-chalkboard-teacher 
+        i.fas.fa-chalkboard-teacher
       = link_to "Data Studio", data_studios_path
     li.clearfix
       .icon-container
@@ -22,6 +22,10 @@ nav#sidebar
       .icon-container
         i.fas.fa-crosshairs
       = link_to "Demand Side Platforms", platforms_path
+    li.clearfix
+      .icon-container
+        i.fas.fa-address-card
+      = link_to 'Customer Data Platform', 'https://smartpixl.com/Login/Login/Login'
     li.clearfix
       .icon-container
         i.fas.fa-chart-pie
