Update sidebar links

--- a/app/views/layouts/_side_nav.slim
+++ b/app/views/layouts/_side_nav.slim
@@ -25,7 +25,11 @@ nav#sidebar
     li.clearfix
       .icon-container
         i.fas.fa-address-card
-      = link_to 'Customer Data Platform', 'https://smartpixl.com/Login/Login/Login'
+      = link_to 'Customer Data Platform', 'https://smartpixl.com/Login/Login/Login', target: :_blank
+    li.clearfix
+      .icon-container
+        i.fas.fa-search-location
+      = link_to 'Where to Buy', 'https://insights.pricespider.com/login', target: :_blank
     li.clearfix
       .icon-container
         i.fas.fa-chart-pie
