--- a/app/views/advertisers/_form.html.slim
+++ b/app/views/advertisers/_form.html.slim
@@ -71,7 +71,7 @@
       .form-group.mb-4
         = f.input :language, collection: language_options, input_html: { multiple: true, class: 'select2-input form-control', data: { placeholder: 'Select Languages' } }, include_hidden: false
     .col-4
-      .form-group.mb-4
+      .form-group.mb-4.affinity-select
         = f.input :affinity, collection: affinity_options, input_html: { multiple: true, class: 'select2-input form-control', data: { placeholder: 'Select Affinity' } }, include_hidden: false
 
     .col-12
