--- a/app/assets/stylesheets/campaigns.sass
+++ b/app/assets/stylesheets/campaigns.sass
@@ -8,3 +8,54 @@
     padding: 5px 15px
     border: 1px solid #ced4da
     border-radius: 0.25rem
+
+  .categories-select
+    .dropdown
+      width: 100%
+
+  .categories-select .dropdown-trigger
+    border-radius: 0.25rem
+    width: 100%
+    font-size: 1rem
+    font-weight: 400
+    line-height: 1.5
+    color: #495057
+    background-color: #fff
+    background-clip: padding-box
+    border: 1px solid #ced4da
+    border-radius: 0.25rem
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out
+
+  .categories-select .dropdown-trigger > span:after
+    font-size: 12px
+    color: #555
+
+  .categories-select .toggle
+    font: normal normal normal 12px/1 FontAwesome
+    color: #555
+    margin: 0 5px
+
+  .categories-select .toggle.collapsed::after
+    content: "\f067"
+
+  .categories-select .toggle.expanded::after
+    content: "\f068"
+
+  .categories-select .root
+    padding: 0px
+    margin: 0px
+    width: 395px
+
+  .categories-select
+    .search
+      width: 330px
+      border-bottom: unset
+
+  .categories-select
+    .dropdown-content
+      height: 125px
+      overflow: auto
+    .tag-item
+      margin: 2px 10px
+    .checkbox-item
+      margin: 0 5px
