Create campaign & audience submit function

--- a/app/views/campaigns/new.slim
+++ b/app/views/campaigns/new.slim
@@ -1,2 +1,1 @@
-
-= react_component("CampaignNew", props: { providers: @providers, categories: @categories }, prerender: false)
+= react_component("CampaignNew", props: { providers: @providers, categories: @categories, company: @company, is_client: @is_client}, prerender: false)
