Update the styling of Campaign pages

--- a/app/assets/stylesheets/campaigns.sass
+++ b/app/assets/stylesheets/campaigns.sass
@@ -7,8 +7,12 @@
     overflow-x: hidden
     padding: 5px 15px
     border: 1px solid #ced4da
-    border-radius: 0.25rem
-
+  label
+    text-transform: capitalize
+  .submit-btns
+    justify-content: flex-end
+    .io-btn
+      margin-right: 15px
   .category
     .ant-select.ant-tree-select.ant-select-multiple.ant-select-show-search
       .ant-select-selector
