Add date and num picker

--- a/app/assets/stylesheets/campaigns.sass
+++ b/app/assets/stylesheets/campaigns.sass
@@ -10,7 +10,6 @@
   label
     text-transform: capitalize
   .submit-btns
-    justify-content: flex-end
     .io-btn
       margin-right: 15px
   .category
@@ -28,3 +27,5 @@
         border: 1px solid #ced4da
         border-radius: 0.25rem
         transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out
+  .react-datepicker-wrapper
+    display: unset
