--- a/app/views/campaigns/new.slim
+++ b/app/views/campaigns/new.slim
@@ -1,1 +1,1 @@
-= react_component("CampaignNew", props: { providers: @providers, categories: @categories, company: @company, is_client: @is_client}, prerender: false)
+= react_component("CampaignNew", props: { providers: @providers, categories: @categories, company: @company, is_client: @is_client, goal_options: goal_options, kpi_options: kpi_options}, prerender: false)
