--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -14,7 +14,7 @@ html
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
 
-    script src="https://unpkg.com/react-dropdown-tree-select/dist/react-dropdown-tree-select.js
+    script src="https://unpkg.com/react-dropdown-tree-select/dist/react-dropdown-tree-select.js"
 
     script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.full.js"
     script src="https://kit.fontawesome.com/52147ba709.js" crossorigin="anonymous"
