Add in error validation

--- a/app/assets/stylesheets/campaigns.sass
+++ b/app/assets/stylesheets/campaigns.sass
@@ -29,3 +29,6 @@
         transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out
   .react-datepicker-wrapper
     display: unset
+  .error-msg
+    color: red
+    text-transform: capitalize
